NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductFeature__c/fields/NATT_Old_Sandbox_Feature_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Old_Sandbox_Feature_Id__c</fullName>
    <description>for data loads and vlookup</description>
    <label>NATT Old Sandbox Feature Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>