NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductFeature__c/fields/NATT_Upload_Key__c.field-meta.xml
<CustomField>
    <fullName>NATT_Upload_Key__c</fullName>
    <description>NATT for data loads</description>
    <formula>IF(ISBLANK(TEXT(SBQQ__Category__c)), SBQQ__ConfiguredSKU__r.Name +&quot;-&quot;+  Name +&quot;=&quot;+ &quot;NONE&quot;,

SBQQ__ConfiguredSKU__r.Name +&quot;-&quot;+  Name +&quot;-&quot;+  TEXT(SBQQ__Category__c)
)</formula>
    <label>Upload Key</label>
    <type>Text</type>
</CustomField>