NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductFeature__c/fields/Product_Feature_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Feature_Auto_Number__c</fullName>
    <displayFormat>PF-{000}</displayFormat>
    <label>Product Feature Auto Number</label>
    <type>AutoNumber</type>
</CustomField>