NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__Category__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Category__c</fullName>
    <description>Category of options in this feature. Allows for another level of grouping.</description>
    <inlineHelpText>Assign this feature to a category such that multiple features with related options are grouped together.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CHINA</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>FRANCIA</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Truck Selection</fullName>
            </value>
            <value>
                <fullName>Unit Selection</fullName>
            </value>
            <value>
                <fullName>Evaporator Selection</fullName>
            </value>
            <value>
                <fullName>Accessories Selection</fullName>
                <label>Options</label>
            </value>
            <value>
                <fullName>Recorder &amp; Telematics</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>KITS</fullName>
            </value>
            <value>
                <fullName>Related Options</fullName>
            </value>
            <value>
                <fullName>Standard Sales Options</fullName>
            </value>
            <value>
                <fullName>Non-Standard Sales Options</fullName>
            </value>
            <value>
                <fullName>Special Options</fullName>
            </value>
            <value>
                <fullName>BluEdge</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>Chiquita UG Option package</fullName>
            </value>
            <value>
                <fullName>Matson UG Option package</fullName>
            </value>
            <value>
                <fullName>No Category</fullName>
            </value>
            <value>
                <fullName>Atmosphere</fullName>
            </value>
            <value>
                <fullName>Controls</fullName>
            </value>
            <value>
                <fullName>Refrigeration</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>TELEMATICS</fullName>
            </value>
            <value>
                <fullName>Convenience Features</fullName>
            </value>
            <value>
                <fullName>Unit Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>