NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__ConfigurationFieldSet__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ConfigurationFieldSet__c</fullName>
    <description>The API name of the field set that will be used for this feature during configuration.</description>
    <inlineHelpText>The API name of the field set that will be used for this feature during configuration.</inlineHelpText>
    <label>Configuration Field Set</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OptionConfiguration</fullName>
            </value>
            <value>
                <fullName>NATT_Special_Requests</fullName>
            </value>
            <value>
                <fullName>NATT_Units_Standard_Options</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Bundle</fullName>
            </value>
            <value>
                <fullName>NATT_Units_Non_Standard_Options</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Optional_Coverage</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Elite_Optional</fullName>
            </value>
            <value>
                <fullName>NATT_Travel_Options</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Major_Components</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Discount</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Extended_Basic</fullName>
            </value>
            <value>
                <fullName>NATT_BluEdge_Basic_Major_Components</fullName>
            </value>
            <value>
                <fullName>CTM_Units_Field_Set</fullName>
            </value>
            <value>
                <fullName>CONTAINER_Warranty_Description</fullName>
            </value>
            <value>
                <fullName>CTBR_BluEdge_Basic_Major_Components</fullName>
            </value>
            <value>
                <fullName>CTBR_BluEdge_Bundle</fullName>
            </value>
            <value>
                <fullName>CTBR_BluEdge_Discount</fullName>
            </value>
            <value>
                <fullName>CTBR_BluEdge_Elite_Optional</fullName>
            </value>
            <value>
                <fullName>CTBR_BluEdge_Extended_Basic</fullName>
            </value>
            <value>
                <fullName>CTBR_BluEdge_Major_Components</fullName>
            </value>
            <value>
                <fullName>CTBR_BluEdge_Optional_Coverage</fullName>
            </value>
            <value>
                <fullName>CTBR_Travel_Options</fullName>
            </value>
            <value>
                <fullName>CTM_BluEdge_Discount</fullName>
            </value>
            <value>
                <fullName>CTM_BluEdge_Bundle</fullName>
            </value>
            <value>
                <fullName>CTM_BluEdge_Elite_Optional</fullName>
            </value>
            <value>
                <fullName>CTM_Travel_Options</fullName>
            </value>
            <value>
                <fullName>CTM_BluEdge_Optional_Coverage</fullName>
            </value>
            <value>
                <fullName>CTM_BluEdge_Basic_Major_Components</fullName>
            </value>
            <value>
                <fullName>CTM_BluEdge_Extended_Basic</fullName>
            </value>
            <value>
                <fullName>CTM_BluEdge_Major_Components</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>