NATTQA-ENV/force-app/main/default/objects/SBQQ__ProductFeature__c/fields/SBQQ__DynamicProductFilterFieldSet__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__DynamicProductFilterFieldSet__c</fullName>
    <description>The API name of the field set that will be used when filtering dynamic options for this feature during configuration.</description>
    <inlineHelpText>The API name of the field set that will be used when filtering dynamic options for this feature during configuration.</inlineHelpText>
    <label>Dynamic Option Filter Field Set</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ConfiguratorFilter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>